--- a/TSIR.html
+++ b/TSIR.html
@@ -69,7 +69,7 @@ img {
 <div id="header">
 <h1 class="title">TSIR</h1>
 <h4 class="author"><em>Michael Li</em></h4>
-<h4 class="date"><em>11:25 14 July 2016</em></h4>
+<h4 class="date"><em>11:28 14 July 2016</em></h4>
 </div>
 
 
@@ -113,7 +113,7 @@ S_{t} = S_{t-1} - I_{t}
 <li><span class="math inline">\(\beta = 0.7 , \textrm{(effective proportion of population)}\)</span></li>
 <li><span class="math inline">\(r = 0.4 , \textrm{(reporting mean/probability)}\)</span></li>
 </ul>
-<p>The code is here:</p>
+<p>The codes are here (todo: change parameter names to be consistent with write-up):</p>
 <ul>
 <li><a href="https://github.com/wzmli/lunchbox/blob/master/simulators/simulator.CB.R">Simulator</a></li>
 <li><a href="https://github.com/wzmli/lunchbox/blob/master/dis.B.B.buggen">Bugs script</a></li>
