--- a/TSIR.html
+++ b/TSIR.html
@@ -69,7 +69,7 @@ img {
 <div id="header">
 <h1 class="title">TSIR</h1>
 <h4 class="author"><em>Michael Li</em></h4>
-<h4 class="date"><em>05:01 15 July 2016</em></h4>
+<h4 class="date"><em>05:06 15 July 2016</em></h4>
 </div>
 
 
@@ -176,7 +176,7 @@ S_{t} = S_{t-1} - I_{t}
 <div id="instructions-to-reproduce-the-plots-below-1" class="section level4">
 <h4>Instructions to reproduce the plots below</h4>
 <ul>
-<li>type <strong>make dis.jags.fit.Rout</strong> (the second time will simulate and fit the model)</li>
+<li>type <strong>make hyb.jags.fit.Rout</strong> (given you already did the first two step before)</li>
 </ul>
 <p><em>r</em> (aka <em>repMean</em>) is still mixing poorly. HELP!</p>
 <pre><code>## Inference for Bugs model at &quot;hyb.B.P.buggen&quot;, fit using jags,
