--- a/ordtrans.html
+++ b/ordtrans.html
@@ -118,7 +118,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Ordinal Transmation</h1>
 <h4 class="author"><em>Michael WZ Li</em></h4>
-<h4 class="date"><em>15:35 19 June 2017</em></h4>
+<h4 class="date"><em>16:47 19 June 2017</em></h4>
 
 </div>
 
@@ -182,47 +182,48 @@ print(probs_ro)</code></pre>
 ## 0.6666667 0.5000000 0.3333333 0.1666667</code></pre>
 <pre class="r"><code>sum(probs_ro)</code></pre>
 <pre><code>## [1] 1.666667</code></pre>
-<div id="assignment-random-grouping-for-random-effect" class="section level2">
-<h2>Assignment random grouping for random effect</h2>
-<pre class="r"><code>dat$group &lt;- 1:10
+<div id="assigning-random-grouping-for-random-effect" class="section level2">
+<h2>Assigning random grouping for random effect</h2>
+<pre class="r"><code>dat$group &lt;- c(rep(1,10),rep(2,20),rep(3,30),rep(4,40),rep(5,2),rep(6,198))
 head(dat)</code></pre>
 <pre><code>##   y y_ro group
 ## 1 0    2     1
-## 2 0    4     2
-## 3 0    1     3
-## 4 0    0     4
-## 5 0    1     5
-## 6 0    4     6</code></pre>
-<pre class="r"><code>mod_RE &lt;- clmm(y_ro~1+(1|group),data=dat)
-
-summary(mod_RE)</code></pre>
+## 2 0    4     1
+## 3 0    1     1
+## 4 0    0     1
+## 5 0    1     1
+## 6 0    4     1</code></pre>
+<pre class="r"><code>mod_RE &lt;- clmm(y~1+(1|group),data=dat)</code></pre>
+<pre><code>## Warning in update.uC(rho): Non finite negative log-likelihood
+##   at iteration 1299</code></pre>
+<pre class="r"><code>summary(mod_RE)</code></pre>
 <pre><code>## Cumulative Link Mixed Model fitted with the Laplace approximation
 ## 
-## formula: y_ro ~ 1 + (1 | group)
+## formula: y ~ 1 + (1 | group)
 ## data:    dat
 ## 
-##  link  threshold nobs logLik  AIC    niter    max.grad cond.H 
-##  logit flexible  300  -467.59 945.18 235(479) 5.01e-05 1.2e+02
+##  link  threshold nobs logLik  AIC    niter     max.grad cond.H 
+##  logit flexible  300  -282.08 574.16 298(4182) 1.25e-04 3.8e+04
 ## 
 ## Random effects:
 ##  Groups Name        Variance Std.Dev.
-##  group  (Intercept) 0.06582  0.2566  
-## Number of groups:  group 10 
+##  group  (Intercept) 700.7    26.47   
+## Number of groups:  group 6 
 ## 
 ## No Coefficients
 ## 
 ## Threshold coefficients:
-##      Estimate Std. Error z value
-## 0|1 -0.704346   0.147865  -4.763
-## 1|2 -0.001499   0.141764  -0.011
-## 2|3  0.700709   0.147725   4.743
-## 3|4  1.628396   0.176367   9.233</code></pre>
+##     Estimate Std. Error z value
+## 0|1   12.796      4.714   2.715
+## 1|2   24.676      9.633   2.562
+## 2|3   25.796      9.634   2.678
+## 3|4   26.903      9.635   2.792</code></pre>
 <pre class="r"><code>probs_RE &lt;- plogis(-mod_RE$alpha)
 print(probs_RE)</code></pre>
-<pre><code>##       0|1       1|2       2|3       3|4 
-## 0.6691506 0.5003748 0.3316550 0.1640502</code></pre>
+<pre><code>##          0|1          1|2          2|3          3|4 
+## 2.771112e-06 1.920121e-11 6.264406e-12 2.071541e-12</code></pre>
 <pre class="r"><code>sum(probs_RE)</code></pre>
-<pre><code>## [1] 1.665231</code></pre>
+<pre><code>## [1] 2.771139e-06</code></pre>
 <p>As expected, not much change.</p>
 <div id="adding-fix-effects" class="section level3">
 <h3>Adding fix effects</h3>
