--- a/pymc.html
+++ b/pymc.html
@@ -69,7 +69,7 @@ img {
 <div id="header">
 <h1 class="title">testing</h1>
 <h4 class="author"><em>Michael Li</em></h4>
-<h4 class="date"><em>21:42 07 April 2016</em></h4>
+<h4 class="date"><em>20:47 21 June 2017</em></h4>
 </div>
 
 
@@ -174,26 +174,26 @@ summary(trace)
 <pre><code>## /Users/mikemike/anaconda/lib/python3.5/site-packages/numpy-1.11.0-py3.5-macosx-10.5-x86_64.egg/numpy/core/fromnumeric.py:225: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future
 ##   return reshape(newshape, order=order)
 ## Applied log-transform to sigma and added transformed sigma_log to model.
-## {'alpha': 0.5, 'sigma': 1, 'beta': 0.5}
+## {'alpha': 0.5, 'beta': 0.5, 'sigma': 1}
 ## Assigned NUTS to alpha
 ## Assigned NUTS to beta
 ## Assigned NUTS to sigma_log
-## [------------     32%                  ] 329 of 1000 complete in 0.5 sec
-## [-----------------80%----------        ] 808 of 1000 complete in 1.0 sec
-## [-----------------100%-----------------] 1000 of 1000 complete in 1.2 sec
+## [                  0%                  ] 2 of 1000 complete in 1.1 sec
+## [-----------------49%                  ] 491 of 1000 complete in 1.6 sec
+## [-----------------100%-----------------] 1000 of 1000 complete in 2.1 sec
 ## 
 ## alpha:
 ## 
 ##   Mean             SD               MC Error         95% HPD interval
 ##   -------------------------------------------------------------------
 ##   
-##   1.043            0.045            0.001            [0.966, 1.107]
+##   1.042            0.047            0.002            [0.982, 1.108]
 ## 
 ##   Posterior quantiles:
 ##   2.5            25             50             75             97.5
 ##   |--------------|==============|==============|--------------|
 ##   
-##   0.970          1.022          1.044          1.066          1.114
+##   0.981          1.020          1.044          1.067          1.108
 ## 
 ## 
 ## beta:
@@ -201,13 +201,13 @@ summary(trace)
 ##   Mean             SD               MC Error         95% HPD interval
 ##   -------------------------------------------------------------------
 ##   
-##   9.988            0.506            0.009            [9.902, 10.051]
+##   9.960            0.357            0.021            [9.915, 10.050]
 ## 
 ##   Posterior quantiles:
 ##   2.5            25             50             75             97.5
 ##   |--------------|==============|==============|--------------|
 ##   
-##   9.902          9.957          9.980          10.003         10.051
+##   9.910          9.959          9.980          10.002         10.047
 ## 
 ## 
 ## sigma_log:
@@ -215,13 +215,13 @@ summary(trace)
 ##   Mean             SD               MC Error         95% HPD interval
 ##   -------------------------------------------------------------------
 ##   
-##   0.042            0.170            0.017            [-0.043, 0.343]
+##   0.032            0.154            0.015            [-0.062, 0.073]
 ## 
 ##   Posterior quantiles:
 ##   2.5            25             50             75             97.5
 ##   |--------------|==============|==============|--------------|
 ##   
-##   -0.037         -0.011         0.005          0.023          0.661
+##   -0.042         -0.011         0.004          0.020          0.508
 ## 
 ## 
 ## sigma:
@@ -229,13 +229,13 @@ summary(trace)
 ##   Mean             SD               MC Error         95% HPD interval
 ##   -------------------------------------------------------------------
 ##   
-##   1.064            0.291            0.028            [0.958, 1.409]
+##   1.049            0.268            0.026            [0.940, 1.075]
 ## 
 ##   Posterior quantiles:
 ##   2.5            25             50             75             97.5
 ##   |--------------|==============|==============|--------------|
 ##   
-##   0.964          0.989          1.005          1.023          1.937</code></pre>
+##   0.959          0.989          1.004          1.020          1.662</code></pre>
 </div>
 
 
