really going to meeting

--- a/model_mat.html
+++ b/model_mat.html
@@ -83,6 +83,9 @@ img {
 <li>Random Effect Matrices (Z)</li>
 </ul>
 <p>I (like 50% (more like 99.9% humans)) like to assume I know what I am doing and stick a dataset in a blackbox, press a button and close my eyes and hope the blackbox can read my mind or do something smart/sensible. The blackbox usually does something reasonible and often <em>more correct</em> than user have in mind because these are tools developed by very smart people.</p>
+<div id="interactions" class="section level2">
+<h2>Interactions</h2>
+<p>… I am going to skip to the interaction problem. This is a short example of what I mean it can get confusing and hairy. Mathematically speaking, they are identical (p1 and p3, p2 and p4), but because the model frames are arrange in different ways, they look different.</p>
 <pre class="r"><code>library(lme4)
 library(Matrix)
 library(dplyr)</code></pre>
@@ -145,6 +148,7 @@ print(dd)</code></pre>
 ## sp1.site2 . 1 . . . .
 ## sp2.site2 . . . 1 . .
 ## sp3.site2 . . . . . 1</code></pre>
+</div>
 </div>
 
 
